--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -233,6 +233,12 @@ box-shadow:         0px 0px 30px 0px rgba(93, 255, 174, 0.67);
 box-shadow:         0px 0px 30px 0px rgba(255, 252, 93, 0.67);
 }
 
+.orgbar{
+    // position: absolute;
+    margin-left: -311px;
+    margin-top: -2px;
+}
+
 body {
     background-image: url(https://i.imgur.com/eoIlD05.png );
     // background-repeat: no-repeat;
