--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -32,11 +32,11 @@ $theme-colors: (
 }
 
 .ft{
-    color: white;
+    color: rgb(108, 117, 125);
     margin-top: 10px;
-    // -webkit-text-stroke-width: 1px;
-    // -webkit-text-stroke-color: black;
-    text-shadow: 1px 3px black
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color:rgb(107, 195, 76);
+    // text-shadow: 1px 3px black
 }
 
 .main-container{
@@ -236,6 +236,12 @@ box-shadow:         0px 0px 30px 0px rgba(255, 252, 93, 0.67);
 .orgbar{
     // position: absolute;
     margin-left: -311px;
+    margin-top: -2px;
+}
+
+.ftbar{
+    // position: absolute;
+    margin-left: -60px;
     margin-top: -2px;
 }
 
